# rustdeploymentonkubernetes

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: ci-cd.yaml
k8s/: deployment.yaml  service.yaml
src/: main.rs
