[package]
name = "rustdeployment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
